--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "type": "commonjs",
     "scripts": {
         "start": "node ./dist/main.js",
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "eslint ./src/**",
+		"lint:fix": "eslint ./src/** --fix"
     },
     "license": "ISC",
     "dependencies": {
@@ -15,6 +17,13 @@
         "tslog": "^3.2.2"
     },
     "devDependencies": {
-        "@types/express": "^4.17.17"
+        "@types/express": "^4.17.17",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"prettier": "^2.4.1",
+		"eslint": "^8.0.1",
+		"typescript": "^4.4.4"
     }
 }
