--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "type": "commonjs",
     "scripts": {
         "start": "node ./dist/main.js",
+        "dev": "nodemon",
         "build": "tsc",
         "lint": "eslint ./src/**",
-		"lint:fix": "eslint ./src/** --fix"
+        "lint:fix": "eslint ./src/** --fix"
     },
     "license": "ISC",
     "dependencies": {
@@ -19,11 +20,13 @@
     "devDependencies": {
         "@types/express": "^4.17.17",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"prettier": "^2.4.1",
-		"eslint": "^8.0.1",
-		"typescript": "^4.4.4"
+        "@typescript-eslint/parser": "^5.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.4.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.4.4"
     }
 }
